--- a/service.html
+++ b/service.html
@@ -49,7 +49,7 @@
       <span>Loading...</span>
     </div>
   </div>
-  <div id="main_company">
+  <div id="main_service">
     <header>
       <!-- ヘッダー部分 -->
       <div id="main_header">
