--- a/contact.html
+++ b/contact.html
@@ -157,7 +157,7 @@
     </div>
     <img src="img/mail.png" alt="tel.png">
     <div id="icon">
-      <p><a href="#">info@ma-japan.jp</a></p>
+      <p><a href="mailto:info@ma-japan.jp">info@ma-japan.jp</a></p>
     </div>
   </div>
   <div class="footer-right col-md-4 col-sm-6">
