--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
           </div>
           <div id="service_pic">
             <figure class="effect-sadie">
-              <img src="img/https___www.lifeofpix.com_wp-content_uploads_2018_06_310-jira1109-chim.jpg" alt="img14"/>
+              <img src="img/coming-soon-2550190_1280.jpg" alt="img02"/>
               <figcaption>
-                <h2>コンサルティング <span></span></h2>
+                <h3>有料職業紹介業 <span></span></h3>
                 <p>ここに簡単な解説を入れます。</p>
                 <a href="service.html">View more</a>
               </figcaption>
