--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <div id="service_pic">
             <li>
               <figure class="effect-sadie">
-                <img src="img/kaleidico-26MJGnCM0Wc-unsplash.jpg" alt="img02"/>
+                <img src="img/service.png" alt="img02"/>
                 <figcaption>
                   <h2>セールスプロモーション<span></span></h2>
                   <p>マーケティングや広告と連携することで、売り上げだけでなくユーザーエクスペリエンスを向上することができます。</p>
@@ -127,9 +127,9 @@
           </div>
           <div id="service_pic">
             <figure class="effect-sadie">
-              <img src="img/https___www.lifeofpix.com_wp-content_uploads_2018_06_310-jira1109-chim.jpg" alt="img02"/>
+              <img src="img/service_.png" alt="img14"/>
               <figcaption>
-                <h3>有料職業紹介業 <span></span></h3>
+                <h2>コンサルティング <span></span></h2>
                 <p>ここに簡単な解説を入れます。</p>
                 <a href="service.html">View more</a>
               </figcaption>
@@ -141,7 +141,7 @@
             <figure class="effect-sadie">
               <img src="img/coming-soon-2550190_1280.jpg" alt="img02"/>
               <figcaption>
-                <h3>有料職業紹介業 <span></span></h3>
+                <h2>有料職業紹介業 <span></span></h2>
                 <p>ここに簡単な解説を入れます。</p>
                 <a href="service.html">View more</a>
               </figcaption>
@@ -151,7 +151,7 @@
             <figure class="effect-sadie">
               <img src="img/coming-soon-2550190_1280.jpg" alt="img14"/>
               <figcaption>
-                <h3>人材派遣業 <span></span></h3>
+                <h2>人材派遣業 <span></span></h2>
                 <p>ここに簡単な解説を入れます。</p>
                 <a href="service.html">View more</a>
               </figcaption>
