--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     </div>
     <img src="img/tel.png" alt="tel.png">
     <div id="icon">
-      <p> 048-707-5849</p>
+        <p><a href="tel:048-707-5849">048-707-5849</a></p>
     </div>
     <img src="img/mail.png" alt="tel.png">
     <div id="icon">
