--- a/company.html
+++ b/company.html
@@ -104,7 +104,7 @@
             <th>所在地</th>
             <td>〒336-0042<br>
               埼玉県さいたま市南区大字大谷口2709-7<br>
-              TEL.0048-707-5849<br>
+              TEL.048-707-5849<br>
               MAIL.info@ma-japan.jp</td>
             </tr>
             <tr>
@@ -159,7 +159,7 @@
       </div>
       <img src="img/tel.png" alt="tel.png">
       <div id="icon">
-        <p> 048-707-5849</p>
+        <p><a href="tel:048-707-5849">048-707-5849</a></p>
       </div>
       <img src="img/mail.png" alt="tel.png">
       <div id="icon">
