--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <div id="service_pic">
             <li>
               <figure class="effect-sadie">
-                <img src="img/service.png" alt="img02"/>
+                <img src="img/service.jpg" alt="img02"/>
                 <figcaption>
                   <h2>セールスプロモーション<span></span></h2>
                   <p>マーケティングや広告と連携することで、売り上げだけでなくユーザーエクスペリエンスを向上することができます。</p>
@@ -127,7 +127,7 @@
           </div>
           <div id="service_pic">
             <figure class="effect-sadie">
-              <img src="img/service_.png" alt="img14"/>
+              <img src="img/service_.jpg" alt="img14"/>
               <figcaption>
                 <h2>コンサルティング <span></span></h2>
                 <p>ここに簡単な解説を入れます。</p>
