--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <main>
       <!-- <div id="container"> -->
       <div id="inner">
-        <p classs="main_l">次のキャリアへ</p>
+        <p classs="main_l">「自分のように隣人を想ふ」</p>
       </div><!-- inner -->
       <div id="scroll">
         <a href="#main_next"><span></span>Scroll</a>
@@ -114,23 +114,21 @@
       <div id="servise_all">
         <div class="grid">
           <div id="service_pic">
-            <li>
               <figure class="effect-sadie">
-                <img src="img/service.jpg" alt="img02"/>
+                <img src="img/service_.jpg" alt="img02"/>
                 <figcaption>
                   <h2>セールスプロモーション<span></span></h2>
-                  <p>マーケティングや広告と連携することで、売り上げだけでなくユーザーエクスペリエンスを向上することができます。</p>
+                  <p>販売促進において、専門的な知識を持つ弊社の人材が販売戦略、企画立案〜現場での販売、販売後のサポートまでをトータルにサポート致します。</p>
                   <a href="service.html">View more</a>
                 </figcaption>
               </figure>
-            </li>
           </div>
           <div id="service_pic">
             <figure class="effect-sadie">
-              <img src="img/service_.jpg" alt="img14"/>
+              <img src="img/service.jpg" alt="img14"/>
               <figcaption>
                 <h2>コンサルティング <span></span></h2>
-                <p>ここに簡単な解説を入れます。</p>
+                <p>豊富な知識を有する専門スタッフがクライアント様の抱えている問題などをヒヤリングし、現状の分析〜企画と立案を行います。</p>
                 <a href="service.html">View more</a>
               </figcaption>
             </figure>
@@ -142,7 +140,7 @@
               <img src="img/coming-soon-2550190_1280.jpg" alt="img02"/>
               <figcaption>
                 <h2>有料職業紹介業 <span></span></h2>
-                <p>ここに簡単な解説を入れます。</p>
+                <p>ComingSoon</p>
                 <a href="service.html">View more</a>
               </figcaption>
             </figure>
@@ -152,7 +150,7 @@
               <img src="img/coming-soon-2550190_1280.jpg" alt="img14"/>
               <figcaption>
                 <h2>人材派遣業 <span></span></h2>
-                <p>ここに簡単な解説を入れます。</p>
+                <p>ComingSoon</p>
                 <a href="service.html">View more</a>
               </figcaption>
             </figure>
@@ -168,7 +166,10 @@
   <footer class="footer">
     <div class="footer-left col-md-4 col-sm-6">
       <p class="about">
-        <span>株式会社MA-JAPANについて</span> ここに簡単な会社の紹介をいれたいです。
+        <span>株式会社MA-JAPAN</span>
+      弊社では、従業員のことを『自分のように大切にし、一番の理解者でいられる企業』を体現致します。
+      そして、従業員全員がクライアント様、家族、友人などの『関わる全ての人を大切にできる。』
+      そんな企業であれることを常に意識し行動していきます。
       </p>
       <!-- <div class="icons">
       <a href="#"><i class="fa fa-facebook"></i></a>
@@ -185,7 +186,7 @@
     </div>
     <img src="img/tel.png" alt="tel.png">
     <div id="icon">
-        <p><a href="tel:048-707-5849">048-707-5849</a></p>
+      <p><a href="tel:048-707-5849">048-707-5849</a></p>
     </div>
     <img src="img/mail.png" alt="tel.png">
     <div id="icon">
