--- a/service.html
+++ b/service.html
@@ -100,10 +100,9 @@
         <div id="navi_all_font">
           <p class="navi_font">セールスプロモーション</p>
           <p class="navi_second_font">
-            ここにサービスの内容をいれていきます。ここにサービスの内容をいれていきます。</br>
-            ここにサービスの内容をいれていきます。</br>
-            ここにサービスの内容をいれていきます。</br>
-            ここにサービスの内容をいれていきます。</br>
+          販売促進において、専門的な知識を持つ弊社の人材が販売戦略、企画立案〜現場での販売、販売後のサポートまでをトータルにサポート致します。<br>
+          携帯電話、インターネット、家電製品、WEBサイトの構築、各種販売イベント設営から運営まで、<br>
+          豊富な知識を有する人材がクライアント様の販売促進をサポート致します。<br>
           </p>
         </div>
       </div>
@@ -117,10 +116,7 @@
         <div id="navi_all_font">
           <p class="navi_font">コンサルティング</p>
           <p class="navi_second_font">
-            ここにサービスの内容をいれていきます。ここにサービスの内容をいれていきます。</br>
-            ここにサービスの内容をいれていきます。</br>
-            ここにサービスの内容をいれていきます。</br>
-            ここにサービスの内容をいれていきます。</br>
+          豊富な知識を有する専門スタッフがクライアント様の抱えている問題などをヒヤリングし、現状の分析〜企画と立案を行います。<br>
           </p>
         </div>
       </div>
@@ -128,36 +124,29 @@
         <p>ComingSoon</p>
       </div>
       <div id="navi_y">
-        <div id="people">
+        <div id="people_coming">
           <img src="img/02.png" alt="">
         </div>
-        <div id="right">
+        <div id="right_coming">
           <img src="img/right.png" alt="">
         </div>
         <div id="navi_all_font">
           <p class="navi_font">有料職業紹介業</p>
           <p class="navi_second_font">
-            ここにサービスの内容をいれていきます。ここにサービスの内容をいれていきます。</br>
-            ここにサービスの内容をいれていきます。</br>
-            ここにサービスの内容をいれていきます。</br>
-            ここにサービスの内容をいれていきます。</br>
           </p>
         </div>
       </div>
       <div id="navi_j">
-        <div id="people">
+        <div id="people_coming">
           <img src="img/01.png" alt="">
         </div>
-        <div id="right">
+        <div id="right_coming">
           <img src="img/right.png" alt="">
         </div>
         <div id="navi_all_font">
           <p class="navi_font">人材派遣業</p>
           <p class="navi_second_font">
-            ここにサービスの内容をいれていきます。ここにサービスの内容をいれていきます。</br>
-            ここにサービスの内容をいれていきます。</br>
-            ここにサービスの内容をいれていきます。</br>
-            ここにサービスの内容をいれていきます。</br>
+
           </p>
         </div>
       </div>
@@ -170,7 +159,10 @@
   <footer class="footer">
     <div class="footer-left col-md-4 col-sm-6">
       <p class="about">
-        <span>株式会社MA-JAPANについて</span> ここに簡単な会社の紹介をいれたいです。
+        <span>株式会社MA-JAPAN</span>
+      弊社では、従業員のことを『自分のように大切にし、一番の理解者でいられる企業』を体現致します。
+      そして、従業員全員がクライアント様、家族、友人などの『関わる全ての人を大切にできる。』
+      そんな企業であれることを常に意識し行動していきます。
       </p>
       <!-- <div class="icons">
       <a href="#"><i class="fa fa-facebook"></i></a>
@@ -187,7 +179,7 @@
     </div>
     <img src="img/tel.png" alt="tel.png">
     <div id="icon">
-        <p><a href="tel:048-707-5849">048-707-5849</a></p>
+      <p><a href="tel:048-707-5849">048-707-5849</a></p>
     </div>
     <img src="img/mail.png" alt="tel.png">
     <div id="icon">
