--- a/contact.html
+++ b/contact.html
@@ -136,7 +136,10 @@
   <footer class="footer">
     <div class="footer-left col-md-4 col-sm-6">
       <p class="about">
-        <span>株式会社MA-JAPANについて</span> ここに簡単な会社の紹介をいれたいです。
+        <span>株式会社MA-JAPAN</span>
+      弊社では、従業員のことを『自分のように大切にし、一番の理解者でいられる企業』を体現致します。
+      そして、従業員全員がクライアント様、家族、友人などの『関わる全ての人を大切にできる。』
+      そんな企業であれることを常に意識し行動していきます。
       </p>
       <!-- <div class="icons">
       <a href="#"><i class="fa fa-facebook"></i></a>
@@ -153,7 +156,7 @@
     </div>
     <img src="img/tel.png" alt="tel.png">
     <div id="icon">
-        <p><a href="tel:048-707-5849">048-707-5849</a></p>
+      <p><a href="tel:048-707-5849"> 048-707-5849</a></p>
     </div>
     <img src="img/mail.png" alt="tel.png">
     <div id="icon">
