--- a/company.html
+++ b/company.html
@@ -89,6 +89,19 @@
         <a href="#navi">Scroll<span></span></a>
       </div>
     </div>
+    <div id="copany_g">
+        <h3 class="border">MA-JAPANとは</h3>
+        <p>「自分のように隣人を想ふ」
+
+誰しも自分のことは一番に理解しており大切にしていると思います。
+しかし、自分と同等またはそれ以上に周りの人を大切にできている人は多くないのではないでしょうか。
+<br>
+株式会社MA-JAPANでは、
+従業員のことを『自分のように大切にし、一番の理解者でいられる企業』を体現致します。
+<br>
+そして、従業員全員がクライアント様、家族、友人などの『関わる全ての人を大切にできる。』
+そんな企業であれることを常に意識し行動していきます。</p>
+    </div>
     <div id="navi">
       <table>
         <tbody>
@@ -125,12 +138,12 @@
                 ・有料職業紹介業
               </td>
             </tr>
-            <tr>
+            <!-- <tr>
               <th>許認可番号</th>
               <td>労働者派遣業:11-111111<br>
                 有料職業紹介業務:22-22222
               </td>
-            </tr>
+            </tr> -->
           </tbody>
         </table>
       </div>
@@ -142,7 +155,10 @@
     <footer class="footer">
       <div class="footer-left col-md-4 col-sm-6">
         <p class="about">
-          <span>株式会社MA-JAPANについて</span> ここに簡単な会社の紹介をいれたいです。
+          <span>株式会社MA-JAPAN</span>
+        弊社では、従業員のことを『自分のように大切にし、一番の理解者でいられる企業』を体現致します。
+        そして、従業員全員がクライアント様、家族、友人などの『関わる全ての人を大切にできる。』
+        そんな企業であれることを常に意識し行動していきます。
         </p>
         <!-- <div class="icons">
         <a href="#"><i class="fa fa-facebook"></i></a>
@@ -163,7 +179,7 @@
       </div>
       <img src="img/mail.png" alt="tel.png">
       <div id="icon">
-      <p><a href="mailto:info@ma-japan.jp">info@ma-japan.jp</a></p>
+        <p><a href="mailto:info@ma-japan.jp">info@ma-japan.jp</a></p>
       </div>
     </div>
     <div class="footer-right col-md-4 col-sm-6">
